force-app/main/default/objects/Plantilla_Comentario_SLA__mdt/Plantilla_Comentario_SLA__mdt.object-meta.xml
<CustomObject>
    <label>Plantilla Comentario SLA</label>
    <pluralLabel>Plantillas Comentario SLA</pluralLabel>
</CustomObject>