force-app/main/default/objects/Plantilla_Comentario_SLA__mdt/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>80</length>
    <type>Text</type>
</CustomField>