force-app/main/default/objects/Plantilla_Comentario_SLA__mdt/fields/Texto__c.field-meta.xml
<CustomField>
    <fullName>Texto__c</fullName>
    <label>Texto</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>