force-app/main/default/objects/Plantilla_Comentario_SLA__mdt/fields/Tipo_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Ticket__c</fullName>
    <label>Tipo de ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incidente</fullName>
            </value>
            <value>
                <fullName>Requerimiento</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
                <default>true</default>
                <label>Ambos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>